styling for partners

--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
       </div>
 
       <!-- partners -->
+      <h1 class="row-header">Meet some of our sponsors and partners!</h2>
        <div class="four-panel-row-container">
-        <h2>Meet some of our sponsors and partners!</h2>
             <div class="card-three-element">
               <img class="three-panel-image" alt="a picture of a partner" src="images/church.jpeg">
-              <h2> Partner 1 </h2>
+              <h2> Church of Birds </h2>
               <p> A description of partner 1. </p>
             </div>
             <div class="card-three-element">
               <img class="three-panel-image" alt="a picture of a partner" src="images/art museum.jpeg">
-              <h2> Partner 2 </h2>
-              <p> A description of partner 2. </p>
+              <h2> Museum of Souls </h2>
+              <p> Walk through a museum where the paintings capture a moment of the viewers dreams in art </p>
             </div>
             <div class="card-three-element">
               <img class="three-panel-image" alt="a picture of a partner" src="images/leviathan cruises.webp">
-              <h2> Partner 3 </h2>
+              <h2> Leviathan Cruises </h2>
               <p> A description of partner 3. </p>
             </div>
        </div>
@@ -116,7 +116,7 @@
       <!-- newsletter -->
       <!-- email sign up form for newsletter -->
       <div class="single-center-panel-row">
-        <form>
+        <form class="card-three-element">
           <label for="email">Sign up for our newsletter</label>
           <input type="email" id="email" name="email" placeholder="Enter your email">
           <input type="submit" value="Submit">
@@ -125,11 +125,11 @@
 
       <!-- social media section -->
       <div class="single-center-panel-row">
+          <h2> Follow us on social media </h2>
         <a href="https://www.facebook.com/"><img class="logo-image" src="images/logos/facebook logo.png" alt="facebook"></a>
         <a href="https://www.instagram.com/"><img class="logo-image" src="images/logos/instagram logo.png" alt="instagram"></a>
         <a href="https://www.twitter.com/"><img class="logo-image" src="images/logos/twitter logo.png" alt="twitter"></a>
       </div>
-
     </body>
 
     <iframe class="footer-frame" src="footer.html"></iframe>
